check_output_4.txt
    Checking sb-transport v0.1.0 (/Users/bob/Desktop/Projects/ING/sing/singbox-rust/crates/sb-transport)
error[E0412]: cannot find type `Control` in `yamux::connection`
   --> crates/sb-transport/src/multiplex.rs:201:33
    |
201 |     control: yamux::connection::Control,
    |                                 ^^^^^^^ not found in `yamux::connection`

error[E0412]: cannot find type `Control` in `yamux::connection`
   --> crates/sb-transport/src/multiplex.rs:209:40
    |
209 |     fn new(control: yamux::connection::Control, closed: Arc<std::sync::atomic::AtomicBool>) -> Self {
    |                                        ^^^^^^^ not found in `yamux::connection`

error[E0603]: module `connection` is private
   --> crates/sb-transport/src/multiplex.rs:201:21
    |
201 |     control: yamux::connection::Control,
    |                     ^^^^^^^^^^ private module
    |
note: the module `connection` is defined here
   --> /Users/bob/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/yamux-0.13.7/src/lib.rs:31:1
    |
 31 | pub(crate) mod connection;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: module `connection` is private
   --> crates/sb-transport/src/multiplex.rs:209:28
    |
209 |     fn new(control: yamux::connection::Control, closed: Arc<std::sync::atomic::AtomicBool>) -> Self {
    |                            ^^^^^^^^^^ private module
    |
note: the module `connection` is defined here
   --> /Users/bob/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/yamux-0.13.7/src/lib.rs:31:1
    |
 31 | pub(crate) mod connection;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Method`
  --> crates/sb-transport/src/http2.rs:74:12
   |
74 | use http::{Method, Request, Uri};
   |            ^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `BytesMut`
  --> crates/sb-transport/src/grpc.rs:43:25
   |
43 | use bytes::{Buf, Bytes, BytesMut};
   |                         ^^^^^^^^

warning: unused import: `futures::stream::Stream`
  --> crates/sb-transport/src/grpc.rs:44:5
   |
44 | use futures::stream::Stream;
   |     ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `TunnelRequest` and `TunnelResponse`
   --> crates/sb-transport/src/grpc.rs:204:22
    |
204 |         use tunnel::{TunnelRequest, TunnelResponse};
    |                      ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
  --> crates/sb-transport/src/circuit_breaker.rs:27:5
   |
27 | use std::sync::Arc;
   |     ^^^^^^^^^^^^^^

error[E0599]: no method named `control` found for struct `yamux::Connection` in the current scope
   --> crates/sb-transport/src/multiplex.rs:406:34
    |
406 |         let control = connection.control();
    |                                  ^^^^^^^ method not found in `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>`

error[E0599]: the method `next` exists for struct `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>`, but its trait bounds were not satisfied
   --> crates/sb-transport/src/multiplex.rs:413:44
    |
413 |             while let Some(_) = connection.next().await {
    |                                            ^^^^ method cannot be called on `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>` due to unsatisfied trait bounds
    |
   ::: /Users/bob/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/yamux-0.13.7/src/connection.rs:80:1
    |
 80 | pub struct Connection<T> {
    | ------------------------ doesn't satisfy `_: StreamExt` or `_: Stream`
    |
    = note: the following trait bounds were not satisfied:
            `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>: futures::Stream`
            which is required by `yamux::Connection<Compat<Box<dyn AsyncReadWrite>>>: futures::StreamExt`

warning: unused import: `SinkExt`
  --> crates/sb-transport/src/grpc.rs:45:15
   |
45 | use futures::{SinkExt, StreamExt};
   |               ^^^^^^^

warning: unused variable: `cx`
   --> crates/sb-transport/src/http2.rs:381:48
    |
381 |     fn poll_shutdown(mut self: Pin<&mut Self>, cx: &mut Context<'_>) -> Poll<std::io::Result<()>> {
    |                                                ^^ help: if this is intentional, prefix it with an underscore: `_cx`
    |
    = note: `#[warn(unused_variables)]` on by default

warning: variable does not need to be mutable
   --> crates/sb-transport/src/http2.rs:381:22
    |
381 |     fn poll_shutdown(mut self: Pin<&mut Self>, cx: &mut Context<'_>) -> Poll<std::io::Result<()>> {
    |                      ----^^^^
    |                      |
    |                      help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

warning: unused variable: `error`
   --> crates/sb-transport/src/retry.rs:265:35
    |
265 |     pub fn is_transient_dns_error(error: &DialError) -> bool {
    |                                   ^^^^^ help: if this is intentional, prefix it with an underscore: `_error`

warning: unused variable: `is_timeout`
   --> crates/sb-transport/src/circuit_breaker.rs:399:36
    |
399 |     fn should_count_failure(&self, is_timeout: bool) -> bool {
    |                                    ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_is_timeout`

Some errors have detailed explanations: E0412, E0599, E0603.
For more information about an error, try `rustc --explain E0412`.
warning: `sb-transport` (lib) generated 10 warnings
error: could not compile `sb-transport` (lib) due to 6 previous errors; 10 warnings emitted
